--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "creap",
+  "name": "user-management-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -9,6 +9,7 @@
     "bootstrap": "^4.6.0",
     "font-awesome": "^4.7.0",
     "lodash": "^4.17.21",
+    "node-sass": "4.14.1",
     "nodemon": "^2.0.7",
     "react": "^16.12.0",
     "react-bootstrap": "^1.5.2",
